[package]
name = "fuzzypair"
version = "0.1.0"
authors = ["Leo Liu <auleo.liu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "*"
serde = { version = "*", features = ["derive"] }
threadpool="*"
fuzzywuzzy="*"
anyhow="*"
structopt="*"
num_cpus="*"
indicatif="*"
